<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyPFCBalance">

    <GridLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:columnCount="6"
        android:rowCount="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/title_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/tv_title_category"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/title_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/tv_title_morning"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/title_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/tv_title_lunch"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/title_snack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="0"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/tv_title_snack"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/title_diner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="0"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/tv_title_diner"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/title_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:layout_row="0"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/tv_title_sum"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/tv_category_calorie" />

            <TextView
                android:id="@+id/morning_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/tv_morning_calorie" />

            <TextView
                android:id="@+id/lunch_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/tv_lunch_calorie" />

            <TextView
                android:id="@+id/snack_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/tv_snack_calorie" />

            <TextView
                android:id="@+id/diner_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/tv_diner_calorie" />

            <TextView
                android:id="@+id/sum_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/tv_sum_calorie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/tv_category_protein" />

            <TextView
                android:id="@+id/morning_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/tv_morning_protein" />

            <TextView
                android:id="@+id/lunch_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="2"
                android:layout_row="2"
                android:text="@string/tv_lunch_protein" />

            <TextView
                android:id="@+id/snack_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="3"
                android:layout_row="2"
                android:text="@string/tv_snack_protein" />

            <TextView
                android:id="@+id/diner_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="4"
                android:layout_row="2"
                android:text="@string/tv_diner_protein" />

            <TextView
                android:id="@+id/sum_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="5"
                android:layout_row="2"
                android:text="@string/tv_sum_protein" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/tv_category_fat" />

            <TextView
                android:id="@+id/morning_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="1"
                android:layout_row="3"
                android:text="@string/tv_morning_fat" />

            <TextView
                android:id="@+id/lunch_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="2"
                android:layout_row="3"
                android:text="@string/tv_lunch_fat" />

            <TextView
                android:id="@+id/snack_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="3"
                android:layout_row="3"
                android:text="@string/tv_snack_fat" />

            <TextView
                android:id="@+id/diner_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="4"
                android:layout_row="3"
                android:text="@string/tv_diner_fat" />

            <TextView
                android:id="@+id/sum_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="5"
                android:layout_row="3"
                android:text="@string/tv_sum_fat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:text="@string/tv_category_carb" />

            <TextView
                android:id="@+id/morning_carb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="1"
                android:layout_row="4"
                android:text="@string/tv_morning_carb" />

            <TextView
                android:id="@+id/lunch_carb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="2"
                android:layout_row="4"
                android:text="@string/tv_lunch_carb" />

            <TextView
                android:id="@+id/snack_carb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="3"
                android:layout_row="4"
                android:text="@string/tv_snack_carb" />

            <TextView
                android:id="@+id/diner_carb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="4"
                android:layout_row="4"
                android:text="@string/tv_diner_carb" />

            <TextView
                android:id="@+id/sum_carb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_column="5"
                android:layout_row="4"
                android:text="@string/tv_sum_carb" />

    </GridLayout>
    <Button
        android:id="@+id/back_main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onBackMainButtonClick"
        android:text="@string/bt_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</android.support.constraint.ConstraintLayout>